Sun Aug 12 00:24:38 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Uh that's not all I changed in the last commit.
	* Panning is different now. It used to be ctrl+button 3, but this
	was redefinable using cmdline/theme options. Now, instead, it's
	combined with the next image button.
	* ie. by default a single click of button 1 will change images, if
	there is more than one image in the slideshow. Clicking and
	dragging button 1 will pan, if the image is bigger than its
	window. I find this more convenient, but let me know.

Sun Aug 12 00:15:06 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Oops. Fixed bug with zooming out larger images when -g is used.
	* Other fixes.

Sat Aug 11 23:29:32 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fixed annoying bug where feh would limit window size to desktop
	size only on the first image.

Sat Aug 11 23:20:09 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Added -g, --geometry setting to fix feh's geometry. Stops
	repeated resizing when browsing lots of pics. Please test this for
	me as I want to get 1.0 out soon :)p

Sat Aug 11 01:41:21 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Add image and filelist saving to context menus.
	* Tidy menus.

Sat Aug 11 01:25:15 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fixed missing break; in keyevent handler
	* Changed the slideshow pause key from "s,S" to "h,H"
	* New slideshow key "s,S" to save the current image to a unique
	filename (generated in the same way as saved webcam images).
	* New slideshow key "f,F" to save the current filelist, also to a
	unique filename.
	* Little cleanups.

Thu Aug  9 23:57:41 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Oops. Went back to getopt_long. getopt_long_only is cool if you
	only have a few cmdline options, but feh has a bunch and most
	short option combos were coming up as "ambiguous". i.e. feh -Vw
	actually ignores the -w. Fixed.

Thu Aug  9 23:39:02 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
